alright so pretty big update. Removed a lot of the dom from the js side and just added it via html. This mean a lot of files for DOM in js are no longer used/needed. Mostly the view folder was hit, being the form and card js files. I am adding the functionality for the submit to search whatever the input.value was. I think now I need to figure out how I am going to connect the data I got back to the DOM elements.

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,22 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <form id="form" action="submit">
+        <input id="input" type="text" value="texas" />
+        <button id="searchBtn">search</button>
+      </form>
+      <div id="toggler">toggler</div>
+      <div id="card">
+        <li id="name">name</li>
+        <li id="status">status</li>
+        <li id="temp">weather</li>
+        <li id="feelsLike">feels like</li>
+        <li id="high">high</li>
+        <li id="low">low</li>
+        <li id="wind">wind</li>
+        <li id="humidity">humidity</li>
+      </div>
+    </div>
   </body>
 </html>
